fixed link and spacing on homepage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,3 +35,11 @@ background: #555;
 button, .submit{
     cursor: pointer !important
 }
+
+
+* {
+  box-sizing: border-box;
+}
+
+
+
